@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Fri Dec 30 20:20:47 CET 2005
+// Tue Mar 07 18:51:13 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -51,10 +51,24 @@ namespace Mono.Cecil.Binary {
 			get { return m_image; }
 		}
 
-		public ImageReader (string file)
+		ImageReader (Image img)
 		{
-			m_image = Image.GetImage (file);
-			m_image.Accept (this);
+			m_image = img;
+		}
+
+		public static ImageReader Read (string file)
+		{
+			if (file == null)
+				throw new ArgumentNullException ("file");
+
+			FileInfo fi = new FileInfo (file);
+			if (!File.Exists (fi.FullName))
+				throw new FileNotFoundException (fi.FullName);
+
+			Image img = new Image (fi);
+			ImageReader reader = new ImageReader (img);
+			img.Accept (reader);
+			return reader;
 		}
 
 		public BinaryReader GetReader ()
